--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -1,27 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name" translatable="false">WalletPlus</string>
 
-    <string name="main_drawer_item_ic_description">Drawer menu icon</string>
-    <string name="main_drawer_open">Open drawer</string>
-    <string name="main_drawer_close">Close drawer</string>
+    <!-- Common strings -->
+    <string name="appName" translatable="false">WalletPlus</string>
 
     <string name="add">Add</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
 
+    <!-- Navigation drawer -->
     <string name="dashboard_title">Dashboard</string>
+    <string name="categoryMenu">Categories</string>
+    <string name="cashflowMenu">Cash flow</string>
+    <string name="walletMenu">Wallets</string>
+
+    <!-- Category list fragment -->
+
+    <!-- Category details fragment -->
+    <string name="categoryNameLabel">Name:</string>
+    <string name="categoryNameHint">name</string>
+    <string name="categoryTypeLabel">Type:</string>
+    <string name="categoryParentLabel">Parent:</string>
+    <string name="categoryParentPrompt">No parent</string>
+
+    <!-- Wallet details fragment -->
+
+    <!-- Cashflow details fragment -->
+
+
+    <!-- Todo -->
+    <string name="main_drawer_item_ic_description">Drawer menu icon</string>
+    <string name="main_drawer_open">Open drawer</string>
+    <string name="main_drawer_close">Close drawer</string>
+
     <string name="dashboard">It\'s dashboard</string>
 
-    <string name="categories_title">Categories</string>
-    <string name="categoryName">Category name:</string>
-    <string name="parentCategory">Parent category:</string>
+
     <string name="is_main_category">Is main category</string>
     <string name="category_have_children">Selected category contain at last one subcategory</string>
     <string name="do_you_want_to_delete_with_subcategories">Do you want to delete with every subcategories?</string>
-    <string name="cashflow_title">Cash flow</string>
-    <string name="wallets_title">Wallets</string>
     <string name="initialValue">Initial value:</string>
     <string name="wallet_name_label">Wallet name:</string>
     <string name="wallet_initial_amount_label">Initial amount:</string>
