--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
-    <!-- Common strings -->
     <string name="appName" translatable="false">WalletPlus</string>
 
+    <!-- Common strings -->
     <string name="add">Add</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
 
+    <string name="income">Income</string>
+    <string name="expanse">Expanse</string>
+
     <!-- Navigation drawer -->
-    <string name="dashboard_title">Dashboard</string>
+    <string name="dashboardMenu">Dashboard</string>
     <string name="categoryMenu">Categories</string>
     <string name="cashflowMenu">Cash flow</string>
     <string name="walletMenu">Wallets</string>
@@ -25,6 +27,10 @@
     <string name="categoryParentPrompt">No parent</string>
 
     <!-- Wallet details fragment -->
+    <string name="walletNameLabel">Name:</string>
+    <string name="walletNameHint">name</string>
+    <string name="walletInitialAmountLabel">Initial amount:</string>
+    <string name="walletInitialAmount">Initial amount</string>
 
     <!-- Cashflow details fragment -->
 
@@ -35,19 +41,14 @@
     <string name="main_drawer_close">Close drawer</string>
 
     <string name="dashboard">It\'s dashboard</string>
-
-
     <string name="is_main_category">Is main category</string>
     <string name="category_have_children">Selected category contain at last one subcategory</string>
     <string name="do_you_want_to_delete_with_subcategories">Do you want to delete with every subcategories?</string>
     <string name="initialValue">Initial value:</string>
-    <string name="wallet_name_label">Wallet name:</string>
-    <string name="wallet_initial_amount_label">Initial amount:</string>
     <string name="walletNameCantBeEmpty">Wallet name can\'t be empty.</string>
     <string name="walletInitialAmountCantBeEmpty">Initial amount can\'t be empty.</string>
     <string name="walletNameHaveToBeUnique">Wallet name have to be unique.</string>
-    <string name="income">Income</string>
-    <string name="expanse">Expance</string>
+
     <string name="chooseCategory">Choose category...</string>
 
 </resources>
