--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -37,11 +37,18 @@
     <string name="walletInitialAmountLabel">Initial amount:</string>
     <string name="walletInitialAmount">Initial amount</string>
 
+    <!-- Cashflow list fragment -->
+    <string name="cashflowListFromWalletLabel">From: </string>
+    <string name="cashflowListToWalletLabel">To: </string>
+    <string name="cashflowListCommentLabel">Comment:</string>
+
     <!-- Cashflow details fragment -->
     <string name="cashflowFromWalletLabel">From:</string>
     <string name="cashflowToWalletLabel">To:</string>
     <string name="cashflowAmountLabel">Amount:</string>
     <string name="cashflowAmountHint">amount</string>
+    <string name="cashflowCommentLabel">Comment:</string>
+    <string name="cashflowCommentHint">comment</string>
     <string name="cashflowCategoryLabel">Category:</string>
     <string name="cashflowCategoryHint">Choose category…</string>
 
