CardUI and better UX applied to Category List

--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="cashflowCommentHint">comment</string>
     <string name="cashflowCategoryLabel">Category:</string>
     <string name="cashflowCategoryHint">Choose category…</string>
+    <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
 
     <!-- Todo -->
     <string name="main_drawer_item_ic_description">Drawer menu icon</string>
