--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="walletInitialAmountLabel">Initial amount:</string>
     <string name="walletInitialAmount">Initial amount</string>
 
-    <string name="walletDeleteConfirmation">"Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou'll also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}"</string>
+    <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}</string>
 
     <!-- Cashflow list fragment -->
     <string name="cashflowListFromWalletLabel">From: </string>
