Cashflows with no category have "Other" category + category in cashflow is not nullable

--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="walletMenu">Wallets</string>
 
 
+    <!-- Commons -->
+    <string name="otherCategoryName">Other</string>
+
     <!-- Dashboard fragment -->
     <string name="totalAmountLabel">Total:</string>
 
