--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
 
     <!-- Commons -->
     <string name="otherCategoryName">Other</string>
+    <string name="transferCategoryName">Transfer</string>
 
     <!-- Dashboard fragment -->
     <string name="totalAmountLabel">Total:</string>
