--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="add">Add</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <string name="income">Income</string>
     <string name="expanse">Expanse</string>
@@ -16,7 +18,8 @@
     <string name="categoryMenu">Categories</string>
     <string name="cashflowMenu">Cash flow</string>
     <string name="walletMenu">Wallets</string>
-
+    <string name="main_drawer_open">Open drawer</string>
+    <string name="main_drawer_close">Close drawer</string>
 
     <!-- Commons -->
     <string name="otherCategoryName">Other</string>
@@ -38,8 +41,13 @@
     <string name="walletNameHint">name</string>
     <string name="walletInitialAmountLabel">Initial amount:</string>
     <string name="walletInitialAmount">Initial amount</string>
-
     <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}</string>
+    <string name="walletNameCantBeEmpty">Wallet name can\'t be empty.</string>
+    <string name="walletInitialAmountCantBeEmpty">Initial amount can\'t be empty.</string>
+    <string name="walletNameHaveToBeUnique">Wallet name have to be unique.</string>
+
+    <!-- Wallet list fragment -->
+    <string name="initialValue">Initial value:</string>
 
     <!-- Cashflow list fragment -->
     <string name="cashflowListFromWalletLabel">From: </string>
@@ -56,18 +64,4 @@
     <string name="cashflowCategoryLabel">Category:</string>
     <string name="cashflowCategoryHint">Choose category…</string>
     <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
-
-    <!-- Todo -->
-    <string name="main_drawer_item_ic_description">Drawer menu icon</string>
-    <string name="main_drawer_open">Open drawer</string>
-    <string name="main_drawer_close">Close drawer</string>
-
-    <string name="dashboard">It\'s dashboard</string>
-    <string name="is_main_category">Is main category</string>
-    <string name="category_have_children">Selected category contain at last one subcategory</string>
-    <string name="do_you_want_to_delete_with_subcategories">Do you want to delete with every subcategories?</string>
-    <string name="initialValue">Initial value:</string>
-    <string name="walletNameCantBeEmpty">Wallet name can\'t be empty.</string>
-    <string name="walletInitialAmountCantBeEmpty">Initial amount can\'t be empty.</string>
-    <string name="walletNameHaveToBeUnique">Wallet name have to be unique.</string>
 </resources>
