--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -38,10 +38,8 @@
     <string name="categoryCantChangeTypeOfSubcategory">Can\'t change type of subcategory.</string>
 
     <!-- Wallet details fragment -->
-    <string name="walletNameLabel">Name:</string>
-    <string name="walletNameHint">name</string>
-    <string name="walletInitialAmountLabel">Initial amount:</string>
-    <string name="walletInitialAmount">Initial amount</string>
+    <string name="walletNameLabel">Name</string>
+    <string name="walletInitialAmountLabel">Initial amount</string>
     <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}</string>
     <string name="walletNameCantBeEmpty">Wallet name can\'t be empty.</string>
     <string name="walletInitialAmountCantBeEmpty">Initial amount can\'t be empty.</string>
