--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -40,10 +40,12 @@
     <!-- Wallet details fragment -->
     <string name="walletNameLabel">Name</string>
     <string name="walletInitialAmountLabel">Initial amount</string>
+    <string name="walletCurrentAmountLabel">Current amount</string>
     <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}</string>
-    <string name="walletNameCantBeEmpty">Wallet name can\'t be empty.</string>
-    <string name="walletInitialAmountCantBeEmpty">Initial amount can\'t be empty.</string>
-    <string name="walletNameHaveToBeUnique">Wallet name have to be unique.</string>
+    <string name="walletNameIsRequired">wallet name is required.</string>
+    <string name="walletInitialAmountIsRequired">Initial amount is required.</string>
+    <string name="walletInitialAmountIsNotADigit">Initial amount is not a digit.</string>
+
 
     <!-- Wallet list fragment -->
     <string name="walletListInitialValue">Initial value:</string>
