Remove majority of category types + category type now is nullable + merge INCOME, EXPENSE, INCOME_EXPENSE into categories with null type

--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -29,13 +29,17 @@
     <string name="totalAmountLabel">Total:</string>
 
     <!-- Category list fragment -->
+    <string name="categoryNoCategoryName">No category</string>
 
     <!-- Category details fragment -->
     <string name="categoryNameLabel">Name:</string>
     <string name="categoryNameHint">name</string>
     <string name="categoryTypeLabel">Type:</string>
     <string name="categoryParentLabel">Parent:</string>
-    <string name="categoryCantChangeTypeOfSubcategory">Can\'t change type of subcategory.</string>
+    <string name="categoryCantDeleteCategoryWithSubs">Cannot delete category which have subcategories.</string>
+    <string name="categoryMustHaveName">Category must have name.</string>
+    <string name="categorySubCantHaveSubs">Subcategory cannot have subcategories.</string>
+    <string name="categoryNoParentSelected">No parent (main category)</string>
 
     <!-- Wallet details fragment -->
     <string name="walletNameLabel">Name</string>
@@ -65,9 +69,4 @@
     <string name="cashflowCategoryLabel">Category:</string>
     <string name="cashflowCategoryHint">Choose category…</string>
     <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
-    <string name="categoryCantDeleteCategoryWithSubs">Cannot delete category which have subcategories.</string>
-    <string name="categoryMustHaveName">Category must have name.</string>
-    <string name="categoryMustHaveType">Main category must have any type.</string>
-    <string name="categorySubCantHaveSubs">Subcategory cannot have subcategories.</string>
-    <string name="categoryNoParentSelected">No parent (main category)</string>
 </resources>
