--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
 
     <!-- Category list fragment -->
     <string name="categoryNoCategoryName">No category</string>
+    <string name="categoryNoCategoryClicked">This category disappears after setting any category to every cashflows.</string>
 
     <!-- Category details fragment -->
     <string name="categoryNameLabel">Name:</string>
