--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="add">Add</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
 
@@ -21,6 +23,8 @@
     <string name="walletMenu">Wallets</string>
     <string name="main_drawer_open">Open drawer</string>
     <string name="main_drawer_close">Close drawer</string>
+
+    <string name="newAccount">New account</string>
 
     <!-- Commons -->
     <string name="transferCategoryName">Transfer</string>
