--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -10,11 +10,9 @@
     <string name="cancel">Cancel</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-
     <string name="income">Income</string>
     <string name="expanse">Expanse</string>
     <string name="transfer">Transfer</string>
-
     <string name="divider">Divider</string>
     <string name="groupIndicator">Group indicator</string>
     <string name="removeCategory">Remove category</string>
@@ -23,7 +21,6 @@
     <string name="dashboardMenu">Dashboard</string>
     <string name="cashflowMenu">Cash flow</string>
     <string name="walletMenu">Wallets</string>
-
     <string name="newAccount">New account</string>
     <string name="accountLinkWithGoogle">Link with Google</string>
 
@@ -32,13 +29,11 @@
 
     <!-- Category list fragment -->
     <string name="categoryListLabel">Categories</string>
-
     <string name="categoryNoCategoryName">No category</string>
     <string name="categoryNoCategoryClicked">This category disappears after setting category to every cashflows.</string>
 
     <!-- Category details fragment -->
     <string name="categoryDetailsLabel">Category</string>
-
     <string name="categoryNameLabel">Name:</string>
     <string name="categoryNameHint">name</string>
     <string name="categoryParentLabel">Parent:</string>
@@ -47,13 +42,15 @@
     <string name="categorySubCantHaveSubs">Subcategory cannot have subcategories.</string>
     <string name="categoryNoParentSelected">No parent (main category)</string>
 
+    <!-- Wallet list fragment -->
+    <string name="walletListLabel">Wallets</string>
+
     <!-- Wallet details fragment -->
     <string name="walletNameLabel">Name</string>
     <string name="walletInitialAmountLabel">Initial amount</string>
     <string name="walletCurrentAmountLabel">Current amount</string>
     <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}</string>
     <string name="walletNameIsRequired">wallet name is required.</string>
-    <string name="walletInitialAmountIsRequired">Initial amount is required.</string>
     <string name="walletInitialAmountIsNotADigit">Initial amount is not a digit.</string>
 
     <!-- Cashflow list fragment -->
@@ -71,4 +68,8 @@
     <string name="cashflowCategoryLabel">Category:</string>
     <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
     <string name="cashFlowFromAndToWalletsNeedToBeDifferent">From and to wallets need to be different.</string>
+    <string name="title_activity_wallet_details">WalletDetailsActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
