--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -67,7 +67,11 @@
     <string name="cashflowCommentHint">comment</string>
     <string name="cashflowCategoryLabel">Category:</string>
     <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
+
     <string name="cashFlowFromAndToWalletsNeedToBeDifferent">From and to wallets need to be different.</string>
+    <string name="cashFlowDeleteConfirmation">Do you want to delete this cash flow?</string>
+
+
     <string name="title_activity_wallet_details">WalletDetailsActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
