--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="categoryNameLabel">Name:</string>
     <string name="categoryNameHint">name</string>
     <string name="categoryParentLabel">Parent:</string>
+    <string name="categoryDeleteConfirmation">Do you want to delete this category?{0, choice, 0#|1#\n\nYou will also delete {0, number} cash flow.| 1&lt;\n\nYou will also delete {0, number} cash flows.}</string>
     <string name="categoryCantDeleteCategoryWithSubs">Cannot delete category with subcategories.\nDelete subcategories first.</string>
     <string name="categoryMustHaveName">Category must have name.</string>
     <string name="categorySubCantHaveSubs">Subcategory cannot have subcategories.</string>
@@ -49,7 +50,7 @@
     <string name="walletNameLabel">Name</string>
     <string name="walletInitialAmountLabel">Initial amount</string>
     <string name="walletCurrentAmountLabel">Current amount</string>
-    <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cashflow.| 1&lt;\n\nYou will also delete {0, number} cashflows.}</string>
+    <string name="walletDeleteConfirmation">Do you want to delete this wallet?{0, choice, 0#|1#\n\nYou will also delete {0, number} cash flow.| 1&lt;\n\nYou will also delete {0, number} cash flows.}</string>
     <string name="walletNameIsRequired">wallet name is required.</string>
     <string name="walletInitialAmountIsNotADigit">Initial amount is not a digit.</string>
 
