--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -82,6 +82,9 @@
     <string name="profileName">Profile name</string>
     <string name="profileDownloadProfileLabel">Download profile from server</string>
 
+    <!-- Synchronize fragment -->
+    <string name="synchronizeLabel">Synchronize</string>
+
     <string name="title_activity_wallet_details">WalletDetailsActivity</string>
 
 </resources>
