--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -75,6 +75,7 @@
 
     <string name="cashFlowFromAndToWalletsNeedToBeDifferent">From and to wallets need to be different.</string>
     <string name="cashFlowDeleteConfirmation">Do you want to delete this cash flow?</string>
+    <string name="cashFlowTransferCategoryToast">Transfer has to be assigned to Transfer category</string>
 
     <!-- Create Profile fragment -->
     <string name="profileLabel">Profile</string>
