--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="transfer">Transfer</string>
     <string name="divider">Divider</string>
     <string name="groupIndicator">Group indicator</string>
-    <string name="removeCategory">Remove category</string>
 
     <!-- Navigation drawer -->
     <string name="dashboardMenu">Dashboard</string>
@@ -29,26 +28,22 @@
     <!-- Dashboard fragment -->
     <string name="totalAmountLabel">Total:</string>
 
-    <!-- Category list fragment -->
-    <string name="categoryListLabel">Categories</string>
-    <string name="categoryNoCategoryName">No category</string>
-    <string name="categoryNoCategoryClicked">This category disappears after setting category to every cashflows.</string>
+    <!-- Tag list fragment -->
+    <string name="tagListLabel">Tags</string>
 
-    <!-- Category details fragment -->
-    <string name="categoryDetailsLabel">Category</string>
-    <string name="categoryNameLabel">Name:</string>
-    <string name="categoryNameHint">name</string>
-    <string name="categoryParentLabel">Parent:</string>
-    <string name="categoryDeleteConfirmation">Do you want to delete this category?{0, choice, 0#|1#\n\nYou will also delete {0, number} cash flow.| 1&lt;\n\nYou will also delete {0, number} cash flows.}</string>
-    <string name="categoryCantDeleteCategoryWithSubs">Cannot delete category with subcategories.\nDelete subcategories first.</string>
-    <string name="categoryMustHaveName">Category must have name.</string>
-    <string name="categorySubCantHaveSubs">Subcategory cannot have subcategories.</string>
-    <string name="categoryNoParentSelected">No parent (main category)</string>
+    <!-- Tag details fragment -->
+    <string name="tagDetailsLabel">Tag details</string>
+    <string name="tagNameLabel">Name:</string>
+    <string name="tagNameHint">name</string>
+    <string name="tagDeleteConfirmation">Do you want to delete this tag?{0, choice, 0#|1#\n\n{0, number} cash flow will have removed this tag.| 1&lt;\n\n{0, number} cash flows will have removed this tag.}</string>
+    <string name="tagNameIsRequired">Tag name is required.</string>
 
     <!-- Wallet list fragment -->
     <string name="walletListLabel">Wallets</string>
 
     <!-- Wallet details fragment -->
+    <string name="walletDetailsLabel">Wallet details</string>
+
     <string name="walletNameLabel">Name</string>
     <string name="walletInitialAmountLabel">Initial amount</string>
     <string name="walletCurrentAmountLabel">Current amount</string>
@@ -57,22 +52,22 @@
     <string name="walletInitialAmountIsNotADigit">Initial amount is not a digit.</string>
 
     <!-- Cashflow list fragment -->
+    <string name="cashFlowListLabel">Cash flows</string>
     <string name="cashflowListWalletLabel">From: </string>
     <string name="cashflowListCommentLabel">Comment:</string>
 
     <!-- Cashflow details fragment -->
+    <string name="cashFlowDetailsLabel">Cash flow details</string>
     <string name="cashFlowWalletLabel">Wallet:</string>
     <string name="cashflowAmountLabel">Amount:</string>
     <string name="cashflowAmountHint">amount</string>
     <string name="cashflowCommentLabel">Comment:</string>
     <string name="cashflowCommentHint">comment</string>
-    <string name="cashflowCategoryLabel">Category:</string>
-    <string name="cashflowCategoryChooseAlertTitle">Choose category:</string>
+    <string name="cashflowTagLabel">Tag:</string>
     <string name="cashflowDateLabel">Date:</string>
     <string name="cashflowExtraLabel">Extra:</string>
 
     <string name="cashFlowDeleteConfirmation">Do you want to delete this cash flow?</string>
-    <string name="cashFlowTransferCategoryToast">Transfer has to be assigned to Transfer category</string>
 
     <!-- Create Profile fragment -->
     <string name="profileLabel">Profile</string>
@@ -80,9 +75,13 @@
     <string name="profileName">Profile name</string>
     <string name="profileDownloadProfileLabel">Download profile from server</string>
 
+    <!-- Statistic list fragment -->
+    <string name="statisticListLabel">Statistics</string>
+
+    <!-- Tag details fragment -->
+    <string name="statisticDetailsLabel">Statistic details</string>
+
     <!-- Synchronize fragment -->
     <string name="synchronizeLabel">Synchronize</string>
-
-    <string name="title_activity_wallet_details">WalletDetailsActivity</string>
 
 </resources>
