--- a/WalletPlus/src/main/res/values/strings.xml
+++ b/WalletPlus/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="transfer">Transfer</string>
     <string name="divider">Divider</string>
     <string name="groupIndicator">Group indicator</string>
+    <string name="only">only</string>
 
     <!-- Navigation drawer -->
     <string name="dashboardMenu">Dashboard</string>
@@ -34,6 +35,7 @@
 
     <!-- Tag details fragment -->
     <string name="tagDetailsLabel">Tag details</string>
+    <string name="tagDetailsRelatedTagsChartLabel">Summary amount of\nall cash flows containg\n%1$s and ... tags</string>
     <string name="tagNameLabel">Name:</string>
     <string name="tagNameHint">name</string>
     <string name="tagDeleteConfirmation">Do you want to delete this tag?{0, choice, 0#|1#\n\n{0, number} cash flow will have removed this tag.| 1&lt;\n\n{0, number} cash flows will have removed this tag.}</string>
