Profile can be deleted

--- a/WalletUDo/src/main/res/values/strings.xml
+++ b/WalletUDo/src/main/res/values/strings.xml
@@ -88,4 +88,7 @@
     <!-- Synchronize fragment -->
     <string name="synchronizeLabel">Synchronize</string>
 
+    <!-- Settings fragment -->
+    <string name="settingsLabel">Settings</string>
+
 </resources>
