--- a/WalletUDo/src/main/res/values/strings.xml
+++ b/WalletUDo/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="appName" translatable="false">Wallet U Do</string>
+    <string name="appName" translatable="false">Walletudo</string>
 
     <!-- Common strings -->
     <string name="create">Create</string>
